--- a/www/index.html
+++ b/www/index.html
@@ -3,29 +3,28 @@
 <head>
     <meta property="og:type" content="website">
     <meta property="path" content="">
-    <meta property="og:url" content="http://info.cardsandtokens.com">
-    <meta property="og:title" content="Cards &amp; Tokens">
-    <meta property="og:site_name" content="Cards &amp; Tokens">
-    <meta property="og:image" content="http://cardsandtokens.com/assets/cards-and-tokens.jpg">
-    <meta property="og:image:width" content="670">
-    <meta property="og:image:height" content="380">
+    <meta property="og:url" content="https://vapaee.io">
+    <meta property="og:title" content="Vapaée - Telos DEX">
+    <meta property="og:site_name" content="Vapaée - Telos DEX">
+    <meta property="og:image" content="https://vapaee.io/assets/img/vapaee.io-DEX.png">
+    <meta property="og:image:width" content="269">
+    <meta property="og:image:height" content="500">
     <meta property="fb:app_id" content="1658698094394840">
     <meta property="og:locale" content="en_us">
-    <meta property="og:description" content="A place where you can create, trade and collect cards of any topic and make money in the process."> 
-  
+    <meta property="og:description" content="Decentraliced Cryptocurrency Exchange over Telos Blockchain">
 
   <meta charset="utf-8">
   <title>Vapaée.io - Telos DEX</title>
   <base href="/">
   <script>
-    if (location.protocol !== "https:" && location.domain == "vapaee.o") { location.protocol = "https:"; }
+    if (location.protocol !== "https:" && location.host == "vapaee.io") { location.protocol = "https:"; }
   </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="/assets/img/vapaee16.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.bc674500d10f0a3f988a.css"></head>
+<link rel="stylesheet" href="styles.3c3c274c71687f3a6a55.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.a020798f6f1805631840.js"></script><script type="text/javascript" src="scripts.55e097da97e4dd325edb.js"></script><script type="text/javascript" src="main.c94e781704c0691b271f.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.a020798f6f1805631840.js"></script><script type="text/javascript" src="scripts.58f1f7271e4c12b14f17.js"></script><script type="text/javascript" src="main.e2d91bc62dc1b27904a9.js"></script></body>
 </html>
