--- a/www/index.html
+++ b/www/index.html
@@ -93,9 +93,9 @@ body[loading] div[loader] div[inner] .lds-ellipsis div:nth-child(4) {
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/assets/img/vapaee16.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.021efb087b6325443e13.css"></head>
+</head>
 <body loading="true">
     <div loader><div inner><div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div></div></div>
     <app-root></app-root>  
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.a020798f6f1805631840.js"></script><script type="text/javascript" src="scripts.b287e546159f87d5ebd5.js"></script><script type="text/javascript" src="main.ff639715f687382bc3d2.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
