--- a/www/index.html
+++ b/www/index.html
@@ -93,9 +93,12 @@ body[loading] div[loader] div[inner] .lds-ellipsis div:nth-child(4) {
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/assets/img/vapaee16.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
+<link rel="stylesheet" href="styles.5de7074ef139d2ecf98b.css"></head>
 <body loading="true">
-    <div loader><div inner><div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div></div></div>
+    <div loader=""><div inner=""><div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div></div></div>
     <app-root></app-root>  
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.a020798f6f1805631840.js"></script><script type="text/javascript" src="scripts.b287e546159f87d5ebd5.js"></script><script type="text/javascript" src="main.7d4bbca3380623004f99.js"></script></body>
 </html>
