--- a/www/index.html
+++ b/www/index.html
@@ -95,10 +95,11 @@ body[loading] div[loader] div[inner] .lds-ellipsis div:nth-child(4) {
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.a37390a9618af4ddf3a2.css"></head>
+<link rel="stylesheet" href="styles.e41b18d5836d4e69a46d.css"></head>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <body loading="true">
     <div loader=""><div inner=""><div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div></div></div>
     <app-root></app-root>  
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.a020798f6f1805631840.js"></script><script type="text/javascript" src="scripts.b287e546159f87d5ebd5.js"></script><script type="text/javascript" src="main.b7e6e5828e9c8e092804.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.a020798f6f1805631840.js"></script><script type="text/javascript" src="scripts.b287e546159f87d5ebd5.js"></script><script type="text/javascript" src="main.69ea60e30eaabda45edf.js"></script></body>
 </html>
