--- a/www/index.html
+++ b/www/index.html
@@ -103,7 +103,7 @@ body[loading] div[loader] div[inner] .lds-ellipsis div:nth-child(4) {
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.903ceb5b2950e05b7730.css"></head>
+<link rel="stylesheet" href="styles.1b41f894c75e75a096c5.css"></head>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <body loading="true">
     
@@ -111,16 +111,16 @@ body[loading] div[loader] div[inner] .lds-ellipsis div:nth-child(4) {
       <div inner="">
           <div class="vapaee logo">
               <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-              <!-- Created with Inkscape (http://www.inkscape.org/) -->
+              <!-- Created with Inkscape (https://www.inkscape.org/) -->
               
               <svg
-                 xmlns:dc="http://purl.org/dc/elements/1.1/"
-                 xmlns:cc="http://creativecommons.org/ns#"
-                 xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-                 xmlns:svg="http://www.w3.org/2000/svg"
-                 xmlns="http://www.w3.org/2000/svg"
-                 xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-                 xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+                 xmlns:dc="https://purl.org/dc/elements/1.1/"
+                 xmlns:cc="https://creativecommons.org/ns#"
+                 xmlns:rdf="https://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                 xmlns:svg="https://www.w3.org/2000/svg"
+                 xmlns="https://www.w3.org/2000/svg"
+                 xmlns:sodipodi="https://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+                 xmlns:inkscape="https://www.inkscape.org/namespaces/inkscape"
                  width="495"
                  height="254"
                  viewBox="0 0 130.96875 67.204167"
@@ -173,5 +173,5 @@ body[loading] div[loader] div[inner] .lds-ellipsis div:nth-child(4) {
     </div>
     <app-root></app-root>  
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.a020798f6f1805631840.js"></script><script type="text/javascript" src="scripts.b287e546159f87d5ebd5.js"></script><script type="text/javascript" src="main.c727d4f36b0d57c1f6c3.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.a020798f6f1805631840.js"></script><script type="text/javascript" src="scripts.b287e546159f87d5ebd5.js"></script><script type="text/javascript" src="main.88ccd4b9ab2687b6337c.js"></script></body>
 </html>
