--- a/www/index.html
+++ b/www/index.html
@@ -95,6 +95,7 @@ body[loading] div[loader] div[inner] .lds-ellipsis div:nth-child(4) {
     <title>Vapaée.io - Telos DEX</title>
     <base href="/">
     <script>
+      window.global = window;
       if (location.protocol !== "https:" && location.host == "vapaee.io") { location.protocol = "https:"; }
     </script>
 
@@ -173,5 +174,5 @@ body[loading] div[loader] div[inner] .lds-ellipsis div:nth-child(4) {
     </div>
     <app-root></app-root>  
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.a020798f6f1805631840.js"></script><script type="text/javascript" src="scripts.b287e546159f87d5ebd5.js"></script><script type="text/javascript" src="main.e527335e9bac476eddb8.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.a020798f6f1805631840.js"></script><script type="text/javascript" src="scripts.b287e546159f87d5ebd5.js"></script><script type="text/javascript" src="main.775b899e4b3173f292c0.js"></script></body>
 </html>
